@@ -3,118 +3,85 @@ package wooteco.subway.domain.path;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static wooteco.subway.testutils.SubWayFixtures.사번_사당역;
+import static wooteco.subway.testutils.SubWayFixtures.삼번_잠실역;
+import static wooteco.subway.testutils.SubWayFixtures.오번_신림역;
+import static wooteco.subway.testutils.SubWayFixtures.이번_선릉역;
+import static wooteco.subway.testutils.SubWayFixtures.일번_강남역;
+import static wooteco.subway.testutils.SubWayFixtures.일호선_구간_1_2_3;
 import static wooteco.subway.testutils.SubWayFixtures.일호선_구간_1번역_2번역_거리_10;
-import static wooteco.subway.testutils.SubWayFixtures.일호선_구간_1번역_3번역_거리_22;
-import static wooteco.subway.testutils.SubWayFixtures.일호선_구간_1번역_5번역_거리_31;
 import static wooteco.subway.testutils.SubWayFixtures.일호선_구간_2번역_3번역_거리_12;
 import static wooteco.subway.testutils.SubWayFixtures.일호선_구간_3번역_4번역_거리_5;
 import static wooteco.subway.testutils.SubWayFixtures.일호선_구간_4번역_5번역_거리_3;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
-import wooteco.subway.domain.section.Section;
+import wooteco.subway.domain.Station;
+import wooteco.subway.domain.section.Sections;
 
 class JgraphtShortestPathFinderTest {
 
     @Test
     void create() {
-        final List<Long> stationIds = List.of(1L, 2L, 3L);
-
-        final List<Section> sections = List.of(
-            일호선_구간_1번역_2번역_거리_10,
-            일호선_구간_2번역_3번역_거리_12,
-            일호선_구간_1번역_3번역_거리_22
-        );
-
-        // when & then (수행)
-        assertDoesNotThrow(() -> JgraphtShortestPathFinder.of(stationIds, sections));
-    }
-
-    @Test
-    void create_fail_invalid_stations() {
-        // 2. graph를 만들 재료들을 생성자 주입하여 -> 정리 -> 필드(상태값)으로 가져 상황을 만든다.
-        //    - 재료들에 외부라이브러리도 추가하되 -> 바뀔 수  있는 구상체로서, 추상체로 인터페이스도 만들어주면 좋다.
-        //    - 여러 라이브러리들 중 하나의 구상체라고 가정 -> if로 하나를 선택하기 보다는 외부 factory를 주입받아 거기서 조달받아 1개로 받기
-        final List<Long> stationIds = List.of(1L);
-
-        final List<Section> sections = List.of(
-            일호선_구간_1번역_2번역_거리_10,
-            일호선_구간_2번역_3번역_거리_12,
-            일호선_구간_1번역_3번역_거리_22
-        );
-
-        // then(수행)
-        assertThatThrownBy(() -> JgraphtShortestPathFinder.of(stationIds, sections))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessage("[ERROR] 지하철역이 부족하여 경로를 만들 수 없습니다.");
+        assertDoesNotThrow(() -> JgraphtShortestPathFinder.of(일호선_구간_1_2_3));
     }
 
     @Test
     void create_fail_invalid_sections() {
-        // 2. graph를 만들 재료들을 생성자 주입하여 -> 정리 -> 필드(상태값)으로 가져 상황을 만든다.
-        //    - 재료들에 외부라이브러리도 추가하되 -> 바뀔 수  있는 구상체로서, 추상체로 인터페이스도 만들어주면 좋다.
-        //    - 여러 라이브러리들 중 하나의 구상체라고 가정 -> if로 하나를 선택하기 보다는 외부 factory를 주입받아 거기서 조달받아 1개로 받기
-        final List<Long> stationIds = List.of(1L, 2L, 3L);
-
-        final List<Section> sections = List.of();
-
-        // when & then (수행)
-        assertThatThrownBy(() -> JgraphtShortestPathFinder.of(stationIds, sections))
+        assertThatThrownBy(() -> JgraphtShortestPathFinder.of(new Sections(Collections.emptyList())))
             .isInstanceOf(IllegalArgumentException.class)
-            .hasMessage("[ERROR] 구간이 비어서 경로를 만들 수 없습니다.");
+            .hasMessage("[ERROR] 지하철역이 부족하여 경로를 만들 수 없습니다.");
     }
 
     @DisplayName("1번역과 5번역 사이 최단거리를 계산하면, 최단 경로와 최단거리를 구한다.")
     @Test
     void find() {
         //given
-        final List<Long> stationIds = List.of(1L, 2L, 3L, 4L, 5L);
-
-        final List<Section> sections = List.of(
+        final Sections sections = new Sections(List.of(
             일호선_구간_1번역_2번역_거리_10,
             일호선_구간_2번역_3번역_거리_12,
             일호선_구간_3번역_4번역_거리_5,
-            일호선_구간_4번역_5번역_거리_3,
-            일호선_구간_1번역_5번역_거리_31
-        );
-
-        final Long source = 1L;
-        final Long target = 5L;
+            일호선_구간_4번역_5번역_거리_3
+        ));
 
         // when
-        final ShortestPathFinder shortestPathFinder = JgraphtShortestPathFinder.of(stationIds, sections);
-        final Path actual = shortestPathFinder.find(source, target);
+        final ShortestPathFinder shortestPathFinder = JgraphtShortestPathFinder.of(sections);
+        final Path actual = shortestPathFinder.find(일번_강남역, 오번_신림역);
 
         // 예상
-        final Path expected = new Path(List.of(1L, 2L, 3L, 4L, 5L), 30);
+        final Path expected = new Path(List.of(일번_강남역, 이번_선릉역, 삼번_잠실역, 사번_사당역, 오번_신림역), 30);
 
         // 검증
         assertThat(actual.toString()).isEqualTo(expected.toString());
     }
 
+    public static Stream<Arguments> find_adjacent_stations() {
+        return Stream.of(
+            Arguments.of(일번_강남역, 이번_선릉역, 10),
+            Arguments.of(이번_선릉역, 삼번_잠실역, 12)
+        );
+    }
+
     @DisplayName("인접한 역끼리 최단거리를 계산하면, 최단 경로와 최단거리를 구한다.")
     @ParameterizedTest
-    @CsvSource(value = {"1:2:10", "2:3:12"}, delimiter = ':')
-    void find_adjacent_stations(final Long source, final Long target, final int expectedDistance) {
+    @MethodSource
+    void find_adjacent_stations(final Station source, final Station target, final int expectedDistance) {
         //given
-        final List<Long> stationIds = List.of(1L, 2L, 3L, 4L, 5L);
-
-        final List<Section> sections = List.of(
+        final Sections sections = new Sections(List.of(
             일호선_구간_1번역_2번역_거리_10,
             일호선_구간_2번역_3번역_거리_12,
             일호선_구간_3번역_4번역_거리_5,
-            일호선_구간_4번역_5번역_거리_3,
-            일호선_구간_1번역_5번역_거리_31
-        );
+            일호선_구간_4번역_5번역_거리_3
+        ));
 
         // when
-        final ShortestPathFinder shortestPathFinder = JgraphtShortestPathFinder.of(stationIds, sections);
+        final ShortestPathFinder shortestPathFinder = JgraphtShortestPathFinder.of(sections);
         final Path actual = shortestPathFinder.find(source, target);
 
         // 예상
@@ -127,24 +94,22 @@ class JgraphtShortestPathFinderTest {
     @DisplayName("떨어진 역도 최단거리를 계산하면, 최단 경로와 최단거리를 구한다.")
     @ParameterizedTest
     @MethodSource
-    void find_remote_stations(final Long source, final Long target,
-                              final List<Long> expectedStationIds, final int expectedDistance) {
-        final List<Long> stationIds = List.of(1L, 2L, 3L, 4L, 5L);
-
-        final List<Section> sections = List.of(
+    void find_remote_stations(final Station source, final Station target,
+                              final List<Station> expectedStations, final int expectedDistance) {
+        //given
+        final Sections sections = new Sections(List.of(
             일호선_구간_1번역_2번역_거리_10,
             일호선_구간_2번역_3번역_거리_12,
             일호선_구간_3번역_4번역_거리_5,
-            일호선_구간_4번역_5번역_거리_3,
-            일호선_구간_1번역_5번역_거리_31
-        );
+            일호선_구간_4번역_5번역_거리_3
+        ));
 
         // when
-        final ShortestPathFinder shortestPathFinder = JgraphtShortestPathFinder.of(stationIds, sections);
+        final ShortestPathFinder shortestPathFinder = JgraphtShortestPathFinder.of(sections);
         final Path actual = shortestPathFinder.find(source, target);
 
         // 예상
-        final Path expected = new Path(expectedStationIds, expectedDistance);
+        final Path expected = new Path(expectedStations, expectedDistance);
 
         // 검증
         assertThat(actual.toString()).isEqualTo(expected.toString());
@@ -152,7 +117,7 @@ class JgraphtShortestPathFinderTest {
 
     public static Stream<Arguments> find_remote_stations() {
         return Stream.of(
-            Arguments.of(1L, 3L, List.of(1L, 2L, 3L), 22)
+            Arguments.of(일번_강남역, 삼번_잠실역, List.of(일번_강남역, 이번_선릉역, 삼번_잠실역), 22)
         );
     }
 
@@ -160,20 +125,17 @@ class JgraphtShortestPathFinderTest {
     @Test
     void find_invalid() {
         //given
-        final List<Long> stationIds = List.of(1L, 2L, 3L, 4L, 5L);
-
-        final List<Section> sections = List.of(
+        //given
+        final Sections sections = new Sections(List.of(
             일호선_구간_1번역_2번역_거리_10,
             일호선_구간_2번역_3번역_거리_12,
             일호선_구간_3번역_4번역_거리_5,
-            일호선_구간_4번역_5번역_거리_3,
-            일호선_구간_1번역_5번역_거리_31
-        );
+            일호선_구간_4번역_5번역_거리_3
+        ));
+        final Station source = 일번_강남역;
+        final Station target = 일번_강남역;
 
-        final Long source = 1L;
-        final Long target = 1L;
-
-        final ShortestPathFinder shortestPathFinder = JgraphtShortestPathFinder.of(stationIds, sections);
+        final ShortestPathFinder shortestPathFinder = JgraphtShortestPathFinder.of(sections);
 
         // when
         assertThatThrownBy(() -> shortestPathFinder.find(source, target))
